nohup.out
Ignoring exception in command <nextcord.application_command.SlashApplicationCommand object at 0x7f9f7531f0>:
Traceback (most recent call last):
  File "/home/ootami/envs/mm/lib/python3.9/site-packages/nextcord/application_command.py", line 906, in invoke_callback_with_hooks
    await self(interaction, *args, **kwargs)
  File "/home/ootami/dev/smirkcat/smirkcat.py", line 147, in peekaboo
    await interaction.response.defer()
  File "/home/ootami/envs/mm/lib/python3.9/site-packages/nextcord/interactions.py", line 694, in defer
    await adapter.create_interaction_response(
  File "/home/ootami/envs/mm/lib/python3.9/site-packages/nextcord/webhook/async_.py", line 204, in request
    raise NotFound(response, data)
nextcord.errors.NotFound: 404 Not Found (error code: 10062): Unknown interaction

The above exception was the direct cause of the following exception:

nextcord.errors.ApplicationInvokeError: Command raised an exception: NotFound: 404 Not Found (error code: 10062): Unknown interaction
Ignoring exception in command <nextcord.application_command.SlashApplicationCommand object at 0x7f9f7531f0>:
Traceback (most recent call last):
  File "/home/ootami/envs/mm/lib/python3.9/site-packages/nextcord/application_command.py", line 906, in invoke_callback_with_hooks
    await self(interaction, *args, **kwargs)
  File "/home/ootami/dev/smirkcat/smirkcat.py", line 147, in peekaboo
    await interaction.response.defer()
  File "/home/ootami/envs/mm/lib/python3.9/site-packages/nextcord/interactions.py", line 694, in defer
    await adapter.create_interaction_response(
  File "/home/ootami/envs/mm/lib/python3.9/site-packages/nextcord/webhook/async_.py", line 204, in request
    raise NotFound(response, data)
nextcord.errors.NotFound: 404 Not Found (error code: 10062): Unknown interaction

The above exception was the direct cause of the following exception:

nextcord.errors.ApplicationInvokeError: Command raised an exception: NotFound: 404 Not Found (error code: 10062): Unknown interaction
Logged in as Meow Meow 🙀#6007
### LOGGED IN AS Meow Meow 🙀#6007, guild: bot testing ###
### LOGGED IN AS Meow Meow 🙀#6007, guild: i had sex.. ###
peekaboo
capturing image
done capturing image
peekaboo
capturing image
done capturing image
peekaboo
capturing image
done capturing image
peekaboo
capturing image
done capturing image
peekaboo
capturing image
done capturing image
peekaboo
capturing image
done capturing image
peekaboo
capturing image
done capturing image
peekaboo
capturing gif
creating gif
done creating gif
peekaboo
capturing gif
creating gif
done creating gif
peekaboo
capturing image
done capturing image
peekaboo
capturing image
done capturing image
Logged in as Meow Meow 🙀#6007
### LOGGED IN AS Meow Meow 🙀#6007, guild: bot testing ###
### LOGGED IN AS Meow Meow 🙀#6007, guild: i had sex.. ###
peekaboo
capturing gif
creating gif
done creating gif
peekaboo
capturing image
done capturing image
contains your mom
peekaboo
capturing image
done capturing image
peekaboo
capturing image
done capturing image
peekaboo
capturing image
done capturing image
peekaboo
capturing gif
creating gif
done creating gif
peekaboo
capturing gif
creating gif
done creating gif
peekaboo
capturing image
done capturing image
peekaboo
capturing image
done capturing image
peekaboo
capturing image
done capturing image
peekaboo
capturing image
done capturing image
peekaboo
capturing image
done capturing image
peekaboo
capturing gif
creating gif
done creating gif
i had sex.. BREEZE... f breeze
peekaboo
capturing gif
creating gif
done creating gif
i had sex.. BREEZE... NO MORE BREEZE WE WIN
i had sex.. *** BREEZE not enough time passed: 2294s ***
i had sex.. BREEZE... i think they’re making changes to bind and breeze
i had sex.. *** BREEZE not enough time passed: 2340s ***
peekaboo
capturing image
done capturing image
  File "/home/ootami/dev/smirkcat/smirkcat.py", line 168
    break;
    ^
SyntaxError: 'break' outside loop
  File "/home/ootami/dev/smirkcat/smirkcat.py", line 166
    choices = {5, 25, 75, 100, 150, 200}
    ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/ootami/dev/smirkcat/smirkcat.py", line 319, in <module>
    GPIO.add_event_detect(12, GPIO.RISING, callback=light_callback)
NameError: name 'light_callback' is not defined
Logged in as Meow Meow 🙀#6007
### LOGGED IN AS Meow Meow 🙀#6007, guild: bot testing ###
### LOGGED IN AS Meow Meow 🙀#6007, guild: i had sex.. ###
Logged in as Meow Meow 🙀#6007
### LOGGED IN AS Meow Meow 🙀#6007, guild: bot testing ###
### LOGGED IN AS Meow Meow 🙀#6007, guild: i had sex.. ###
peekaboo
peekaboo
capturing image
done capturing image
peekaboo
peekaboo
peekaboo
peekaboo
capturing image
done capturing image
